--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ permalink: /:title/
 # Authors
 authors:
   sal:
-    name: Sal
-    display_name: Sal
+    name: Nerdy Hick
+    display_name: NerdyHick
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
