--- a/_config.yml
+++ b/_config.yml
@@ -10,23 +10,14 @@ permalink: /:title/
 
 # Authors
 authors:
-  sal:
+  nerdyhick:
     name: Nerdy Hick
     display_name: NerdyHick
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    gravatar: cd804e8d982e0a4f7873374aa7f2636f
+    email: nerdyhick@gmail.com
+    web: https://www.nerdyhick.com
+    twitter: https://twitter.com/nerdyhick
+    description: "Hardcore nerd, auto enthusiast and certified hick."
 
 # Plugins
 plugins:
